{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 18,
  "lineage": "27760633-2e6b-707d-2517-3d1f16b5c38d",
  "resources": [
    {
      "module": "module.tomcat_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024c319d5d14b463e",
            "arn": "arn:aws:ec2:ap-south-1:227218640239:instance/i-07e8bcd1493e6e717",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e8bcd1493e6e717",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tomcatkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-056b8a59a5152b7ad",
            "private_dns": "ip-10-0-1-234.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.234",
            "public_ip": "13.126.212.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-047bb80ee9430f377",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03dda40e5ad782395",
            "tags": {
              "Name": "tomcatec2"
            },
            "tags_all": {
              "Name": "tomcatec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c34f6a0098b01d7"
            ]
          },
          "dependencies": [
            "module.tomcat_ec2.aws_key_pair.kp",
            "module.tomcat_pub_subnet.aws_subnet.subnet",
            "module.tomcat_security_group.aws_security_group.sg",
            "module.tomcat_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tomcat_ig",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:internet-gateway/igw-0f95630c0497e2980",
            "id": "igw-0f95630c0497e2980",
            "owner_id": "227218640239",
            "tags": {
              "Name": "tomcat_ig"
            },
            "tags_all": {
              "Name": "tomcat_ig"
            },
            "vpc_id": "vpc-095e1ca6e79c7590d"
          },
          "dependencies": [
            "module.tomcat_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tomcat_ig",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:route-table/rtb-023a344e1cb7f7e1c",
            "id": "rtb-023a344e1cb7f7e1c",
            "owner_id": "227218640239",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f95630c0497e2980",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-095e1ca6e79c7590d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tomcat_ig.aws_internet_gateway.ig",
            "module.tomcat_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tomcat_ig",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igrtassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8fbc3a0b2753ca5",
            "route_table_id": "rtb-023a344e1cb7f7e1c",
            "subnet_id": "subnet-03dda40e5ad782395"
          },
          "dependencies": [
            "module.tomcat_ig.aws_internet_gateway.ig",
            "module.tomcat_ig.aws_route_table.igrt",
            "module.tomcat_pub_subnet.aws_subnet.subnet",
            "module.tomcat_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tomcat_pub_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:subnet/subnet-03dda40e5ad782395",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dda40e5ad782395",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "227218640239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tomcat_pub_subnet"
            },
            "tags_all": {
              "Name": "tomcat_pub_subnet"
            },
            "vpc_id": "vpc-095e1ca6e79c7590d"
          },
          "dependencies": [
            "module.tomcat_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tomcat_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:security-group/sg-02c34f6a0098b01d7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c34f6a0098b01d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221112141532312400000001",
            "name_prefix": "terraform-",
            "owner_id": "227218640239",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tomcat_sg"
            },
            "tags_all": {
              "Name": "tomcat_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-095e1ca6e79c7590d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tomcat_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tomcat_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:vpc/vpc-095e1ca6e79c7590d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bfe0f05314bf8bde",
            "default_route_table_id": "rtb-0715ebbf2005cbb74",
            "default_security_group_id": "sg-0042a99549d6fd9e3",
            "dhcp_options_id": "dopt-071ca8a68c61ad0a2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-095e1ca6e79c7590d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0715ebbf2005cbb74",
            "owner_id": "227218640239",
            "tags": {
              "Name": "tomcat_vpc"
            },
            "tags_all": {
              "Name": "tomcat_vpc"
            }
          }
        }
      ]
    }
  ]
}